# testbot

./: pyproject.toml  requirements.txt  rossmann-bot.py
